Jump2SB preparation til 3.15.7 abusing prevention through refer check & refresh cookie

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -36,3 +36,6 @@ a {
   background-color: #fafafa;
   border-color: #ccc;
 }
+.article-profile-box {
+    background-color: #fafafa;
+}
